# mcc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  build_debug.sh  valgrind.sh
include/: Log.h  Scan.h  String.h  Token.h  TokenVector.h  Tokens.h  Vector.h  mcc.h  scan.h  str.h  token.h
include/types/: string.h
lib/: Scan.c  String.c  Vector.c  context.c  context.h  defs.h  lexer.c  lexer.h  mcc.c  scan.c  str.c  token.c
lib/private/: utils.c  utils.h
lib/types/: string.c
mcc/: mcc.c
test/: CMakeLists.txt  Scan.c  String.c  Test.h  Vector.c  constant.c  constant.test.c  constants.ctest  string.c
tests/: CMakeLists.txt  lexer_test.c
tests/test_files/: float_constants.ctest  hello_world.c  integer_constants.ctest
